Fix composer buttons overflowing the composer box in single-column

--- a/app/javascript/flavours/glitch/styles/components/composer.scss
+++ b/app/javascript/flavours/glitch/styles/components/composer.scss
@@ -586,6 +586,7 @@
   white-space: nowrap;
   overflow: hidden;
   justify-content: flex-end;
+  flex: 0 0 auto;
 
   & > .count {
     display: inline-block;
